--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,23 +39,18 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
+        <ImageButton
             android:id="@+id/prev_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/prev_button"
-            android:layout_marginEnd="4dp"
-            app:icon="@drawable/arrow_left"
-            app:iconGravity="textStart"
-            app:iconPadding="4dp" />
+            android:src="@drawable/arrow_left"
+            android:contentDescription="@string/prev_button_description" />
 
-        <Button
+        <ImageButton
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next_button"
-            app:icon="@drawable/arrow_right"
-            app:iconGravity="textEnd"
-            app:iconPadding="4dp" />
+            android:src="@drawable/arrow_right"
+            android:contentDescription="@string/next_button_description"/>
     </LinearLayout>
 </LinearLayout>
