feat: Prevent Abuse of the Cheat System by Setting a Limit

--- a/app/src/main/res/layout/activity_cheat.xml
+++ b/app/src/main/res/layout/activity_cheat.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="@string/warning_text"/>
+        android:text="@string/warning_text" />
 
     <TextView
         android:id="@+id/answer_text_view"
@@ -24,5 +24,11 @@
         android:id="@+id/show_answer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/show_answer_button"/>
+        android:text="@string/show_answer_button" />
+
+    <TextView
+        android:id="@+id/cheats_remaining_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="# cheats remaining" />
 </LinearLayout>
